--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Dash Governance Tools</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.0/themes/smoothness/jquery-ui.css">
+    <link rel="stylesheet" href="css/master.css">
 
     <script src="https://code.jquery.com/jquery-3.1.0.js" integrity="sha256-slogkvB1K3VOkzAI8QITxV3VzpOnkeNVsKvtkYLMjfk=" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.0/jquery-ui.min.js"></script>
@@ -585,172 +586,188 @@
 
     </script>
 
-    <style type="text/css">
-        textarea { background-color:#fafafa !important; }
-        #header { margin-top:2em; }
-
-        .createProposal {  }
-        #createProposalHeader { margin-top:1em; }
-        #createProposalForm { margin-top:1em; }
-
-        .walletCommands {  }
-        #walletCommandsHeader { margin-top:2em; }
-        #walletCommandsPrepare { margin-top:2em; }
-        #walletCommandsTx { margin-top:2em; }
-        #walletCommandsProgress { margin-top:2em; }
-        #walletCommandsSubmit { margin-top:2em; }
-
-        .validationError { background-color:#ffe6e6; }
-
-    </style>
-
 </head>
 <body>
 
-<div class="col-xs-10 col-xs-offset-1">
+<div class="container-fluid">
+  <div class="row" id="header">
+      <div class="col-xs-12">
+          <h1>Dash Budget Proposal Generator</h1>
+          Generate budget proposal commands you can copy/paste into your Dash wallet to prepare a budget proposal and submit it to the network.
+      </div>
+  </div>
 
-    <div class="row" id="header">
-        <div class="col-xs-12">
-            <h1>Dash Budget Proposal Generator</h1>
-            Generate budget proposal commands you can copy/paste into your Dash wallet to prepare a budget proposal and submit it to the network.
+  <div class="row">
+    <div class="col-xs-6 col-xs-offset-3">
+      <div class="proposalBlock createProposal">
+        <div class="row">
+          <div class="col-xs-12">
+            <div class="row" id="createProposalHeader">
+                <div class="col-xs-12">
+                    <h1 class="removeMargin">Create a Proposal</h1>
+                    <h5>Enter details for your proposal and click 'Create Proposal'.  This will generate a command you can run in your local wallet to prepare the proposal at a cost of 0.33 Dash</h5>
+                </div>
+            </div>
+
+            <div id="createProposalForm">
+              <div class="row">
+                <div class="col-xs-12">
+                  <div class="form-group">
+                      <label for="name">Proposal Name:</label>
+                      <input type="text" class="form-control" id="name" value="" placeholder="proposal-name">
+                  </div>
+                  <div class="form-group">
+                      <label for="url">Proposal Description URL:</label>
+                      <input type="text" class="form-control" id="url" value="" placeholder="https://www.dashcentral.org/p/proposal-name">
+                  </div>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="col-xs-3">
+                  <div class="form-group">
+                      <label for="start_epoch">Start Date:</label>
+                      <select name="start_epoch" class="form-control" id="start_epoch"></select>
+                  </div>
+                </div>
+                <div class="col-xs-3">
+                  <!--  -->
+                  <!--  -->
+                  <!-- ATTENTION: COMMENT FOR JON -->
+                  <!--  -->
+                  <!--  -->
+                  <!-- The following form group is a placeholder for proposal end time. Please change to the correct id. -->
+                  <div class="form-group">
+                      <label for="start_epoch">End Date:</label>
+                      <select name="start_epoch" class="form-control" id="end_epoch"></select>
+                  </div>
+                  <!--  -->
+                  <!--  -->
+                  <!--  -->
+                </div>
+                <div class="col-xs-6">
+                  <div class="form-group">
+                      <label for="payment_address">Payment Address:</label>
+                      <input type="text" class="form-control" id="payment_address" value="" placeholder="">
+                  </div>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="col-xs-7">
+                  <div class="form-group">
+                      <label for="payment_amount">Monthly Payment Amount in Dash:</label>
+                      <input type="text" class="form-control" id="payment_amount" value="" placeholder="0">
+                  </div>
+                </div>
+                <div class="col-xs-4 col-xs-offset-1">
+                  <div type="submit" class="btn btn-success" id="btnPrepare">Create Proposal</div>
+                  <div type="submit" class="btn btn-primary hidden" id="btnEdit">Edit Proposal</div>
+                  <div type="submit" class="btn btn-primary hidden" id="btnNew">New Proposal</div>
+                </div>
+              </div>
+
+              <div class="form-group" style="display:none;">
+                  <label for="type">type:</label>
+                  <input type="text" class="form-control" id="type" value="1" placeholder="1">
+              </div>
+
+              <div class="form-group" style="display:none;">
+                  <label for="parentHash">parent-hash:</label>
+                  <input type="text" class="form-control" id="parentHash" value="0" placeholder="0">
+              </div>
+
+              <div class="form-group" style="display:none;">
+                  <label for="revision">revision:</label>
+                  <input type="text" class="form-control" id="revision" value="1" placeholder="1">
+              </div>
+
+              <div class="form-group" style="display:none;">
+                  <label for="time">Creation Time:</label>
+                  <input type="text" class="form-control" id="time" value="" placeholder="">
+              </div>
+
+              <!--  -->
+              <!--  -->
+              <!--  -->
+              <!-- ATTENTION: COMMENT FOR JON -->
+              <!-- The following form group is commented out because it's not a part of the design mock. Staying here for safe keeping just in case still needed. -->
+
+              <!-- <div class="form-group">
+                  <label for="end_epoch">Choose payment cycle:</label>
+                  <select name="end_epoch" class="form-control" id="end_epoch"></select>
+              </div> -->
+            </div>
+          </div>
         </div>
-    </div>
+      </div>
 
-    <div class="row createProposal" id="createProposalHeader">
-        <div class="col-xs-12">
-            <h2>Create a Proposal</h2>
-            Enter details for your proposal and click 'Create Proposal'.  This will generate a command you can run in your local wallet to prepare the proposal at a cost of 0.33 Dash
-        </div>
-    </div>
 
-    <div class="row createProposal" id="createProposalForm">
-        <div class="col-xs-6">
-
-            <div class="form-group">
-                <label for="name">Proposal Name:</label>
-                <input type="text" class="form-control" id="name" value="" placeholder="proposal-name">
-            </div>
-
-            <div class="form-group">
-                <label for="url">Proposal Description URL:</label>
-                <input type="text" class="form-control" id="url" value="" placeholder="https://www.dashcentral.org/p/proposal-name">
-            </div>
-
-            <div class="form-group">
-                <label for="start_epoch">Proposal Start Date:</label>
-                <select name="start_epoch" class="form-control" id="start_epoch"></select>
-            </div>
-
-            <div type="submit" class="btn btn-primary" id="btnPrepare">Create Proposal</div>
-            <div type="submit" class="btn btn-primary hidden" id="btnEdit">Edit Proposal</div>
-            <div type="submit" class="btn btn-primary hidden" id="btnNew">New Proposal</div>
-
-            <div class="form-group" style="display:none;">
-                <label for="type">type:</label>
-                <input type="text" class="form-control" id="type" value="1" placeholder="1">
-            </div>
-
-            <div class="form-group" style="display:none;">
-                <label for="parentHash">parent-hash:</label>
-                <input type="text" class="form-control" id="parentHash" value="0" placeholder="0">
-            </div>
-
-            <div class="form-group" style="display:none;">
-                <label for="revision">revision:</label>
-                <input type="text" class="form-control" id="revision" value="1" placeholder="1">
-            </div>
-
-            <div class="form-group" style="display:none;">
-                <label for="time">Creation Time:</label>
-                <input type="text" class="form-control" id="time" value="" placeholder="">
+        <div class="row walletCommands hidden" id="walletCommandsHeader">
+            <div class="col-xs-12">
+                <h2>Wallet Commands</h2>
             </div>
 
         </div>
 
-        <div class="col-xs-6">
+        <div class="row walletCommands hidden" id="walletCommandsPrepare">
 
-            <div class="form-group">
-                <label for="payment_address">Payment Address:</label>
-                <input type="text" class="form-control" id="payment_address" value="" placeholder="">
-            </div>
+            <div class="col-xs-12">
 
-            <div class="form-group">
-                <label for="payment_amount">Monthly Payment Amount in Dash:</label>
-                <input type="text" class="form-control" id="payment_amount" value="" placeholder="0">
-            </div>
+                    <div class="form-group">
+                        <label for="prepareProposal">Prepare-Proposal Command:</label>
+                        <div>Paste this proposal command into your Dash wallet console to spend a Fee transaction of 0.33 DASH.</div>
+                        <textarea readonly class="form-control" id="prepareProposal" rows="4" placeholder=""></textarea>
+                    </div>
 
-            <div class="form-group">
-                <label for="end_epoch">Choose payment cycle:</label>
-                <select name="end_epoch" class="form-control" id="end_epoch"></select>
             </div>
 
         </div>
 
-    </div>
+        <div class="row walletCommands hidden" id="walletCommandsTx">
 
-    <div class="row walletCommands hidden" id="walletCommandsHeader">
-        <div class="col-xs-12">
-            <h2>Wallet Commands</h2>
-        </div>
-
-    </div>
-
-    <div class="row walletCommands hidden" id="walletCommandsPrepare">
-
-        <div class="col-xs-12">
+            <div class="col-xs-12">
 
                 <div class="form-group">
-                    <label for="prepareProposal">Prepare-Proposal Command:</label>
-                    <div>Paste this proposal command into your Dash wallet console to spend a Fee transaction of 0.33 DASH.</div>
-                    <textarea readonly class="form-control" id="prepareProposal" rows="4" placeholder=""></textarea>
+                    <label for="feeTxid">Fee Transaction ID:</label>
+                    <div>Paste the transaction ID returned by the wallet below to generate the final submit command.</div>
+                    <input type="text" class="form-control" id="feeTxid" value="" placeholder="<fee-txid>">
                 </div>
 
+            </div>
+
         </div>
 
-    </div>
+        <div class="row walletCommands hidden" id="walletCommandsProgress">
 
-    <div class="row walletCommands hidden" id="walletCommandsTx">
+            <div class="col-xs-12">
 
-        <div class="col-xs-12">
+                <div class="form-group">
+                    <label for="feeTxid">Fee Transaction Progress:</label>
+                    <div id="progresstxt">We'll wait for 6 confirmations. Waiting for new blocks to confirm...</div>
+                    <div id="progressbar"></div>
+                </div>
 
-            <div class="form-group">
-                <label for="feeTxid">Fee Transaction ID:</label>
-                <div>Paste the transaction ID returned by the wallet below to generate the final submit command.</div>
-                <input type="text" class="form-control" id="feeTxid" value="" placeholder="<fee-txid>">
+            </div>
+
+        </div>
+
+        <div class="row walletCommands hidden" id="walletCommandsSubmit">
+
+            <div class="col-xs-12">
+
+                <div class="form-group">
+                    <label for="submitProposal">Submit Proposal Command:</label>
+                    <div>Paste the Fee TX id to generate the proposal submit command.  This is the final step and can be completed after 6 confirmations on the fee tx.</div>
+                    <textarea readonly class="form-control" id="submitProposal" rows="4" placeholder=""></textarea>
+                </div>
+
             </div>
 
         </div>
 
     </div>
-
-    <div class="row walletCommands hidden" id="walletCommandsProgress">
-
-        <div class="col-xs-12">
-
-            <div class="form-group">
-                <label for="feeTxid">Fee Transaction Progress:</label>
-                <div id="progresstxt">We'll wait for 6 confirmations. Waiting for new blocks to confirm...</div>
-                <div id="progressbar"></div>
-            </div>
-
-        </div>
-
-    </div>
-
-    <div class="row walletCommands hidden" id="walletCommandsSubmit">
-
-        <div class="col-xs-12">
-
-            <div class="form-group">
-                <label for="submitProposal">Submit Proposal Command:</label>
-                <div>Paste the Fee TX id to generate the proposal submit command.  This is the final step and can be completed after 6 confirmations on the fee tx.</div>
-                <textarea readonly class="form-control" id="submitProposal" rows="4" placeholder=""></textarea>
-            </div>
-
-        </div>
-
-    </div>
-
+  </div>
 </div>
 
 </body>
