comment out social links for now, issue #8

--- a/index.html
+++ b/index.html
@@ -599,12 +599,16 @@
           <h2 class="header_title">Dash Budget Proposal Generator</h2>
           <h5 class="header_description">Generate budget proposal commands you can copy/paste into your Dash wallet to prepare a budget proposal and submit it to the network.</h5>
       </div>
-      <div class="col-sm-4 col-sm-offset-2 text-right">
+      <!--  -->
+      <!--  -->
+      <!-- Social icons commented out until we get proper links  -->
+      <!--  -->
+      <!-- <div class="col-sm-4 col-sm-offset-2 text-right">
         <i class="fa fa-twitter" aria-hidden="true"></i>
         <i class="fa fa-facebook" aria-hidden="true"></i>
         <i class="fa fa-rss" aria-hidden="true"></i>
         <img id="lang_box" src="images/lang.png" alt="english language">
-      </div>
+      </div> -->
   </div>
 
   <div class="row">
