move proposol header and description to right side of form

--- a/index.html
+++ b/index.html
@@ -95,8 +95,7 @@
         <img src="images/dash_logo.png" alt="dash governance tools">
       </div>
       <div class="col-md-4">
-          <h2 class="header_title">Dash Budget Proposal Generator</h2>
-          <h5 class="header_description">Generate budget proposal commands you can copy/paste into your Dash wallet to prepare a budget proposal and submit it to the network.</h5>
+
       </div>
       <!--  -->
       <!--  -->
@@ -111,8 +110,19 @@
   </div>
 
   <div class="row">
+    <div class="col-lg-2 col-md-2 col-md-push-8">
+      <div class="row" id="side-header">
+        <div class="col-xs-12">
+          <div >
+            <h3 class="header_title">Dash Budget Proposal</h3>
+            <p id="side_header_description" class="header_description">Generate budget proposal commands you can copy/paste into your Dash wallet to prepare a budget proposal and submit it to the network.</p>
+            <a href="#"><h5 id="proposal_link">Proposal Generator</h5></a>
+          </div>
+        </div>
+      </div>
+    </div>
 
-    <div class="col-lg-7 col-md-7 col-md-offset-2 col-sm-12 col-sm-offset-0 col-xs-12 col-xs-offset-0">
+    <div class="col-lg-6 col-md-6 col-md-offset-2 col-md-pull-2 col-sm-12 col-sm-offset-0 col-xs-12 col-xs-offset-0">
       <div class="proposalBlock createProposal">
         <div class="row">
           <div class="col-xs-12">
@@ -281,6 +291,7 @@
         </div>
 
     </div>
+
   </div>
 </div>
 
