--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
+
     <title>Dash Governance Tools</title>
+
+    <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
     <script src="bitcore-lib-dash.js"></script>
 
@@ -162,7 +165,7 @@
                   <!--  -->
                   <!-- The following form group is a placeholder for proposal end time. Please change to the correct id. -->
                   <div class="form-group">
-                      <label for="start_epoch">End Date:</label>
+                      <label for="start_epoch">Number of Payments:</label>
                       <select name="start_epoch" class="form-control" id="end_epoch"></select>
                   </div>
                   <!--  -->
